<resources>
    <!-- Main activity (Login) -->
    <string name="app_name">Mi Tribu</string>
    <string name="login_mail">E-mail</string>
    <string name="login_pass">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Registrate!</string>

    <!-- Register -->
    <string name="title_activity_register">Register</string>
    <string name="btn_accept">Aceptar</string>
    <string name="til_name">Nombre</string>
    <string name="til_date">Fecha de nacimiento</string>
    <string name="til_email">E-mail</string>
    <string name="til_pass">Contraseña</string>
    <string name="til_repeatpass">Repite tu contraseña</string>

    <!-- Main activity (Login) -->
    <string name="til_form_name">Ingresa tu nombre o el de tu tienda</string>
    <string name="rbt_product">Producto</string>
    <string name="rbt_service">Servicio</string>
    <string name="product_title">¿Qué es lo que ofreces?</string>
    <string name="product_description">Cuéntanos más detalles de tu producto o servicio</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_clean">Limpiar</string>
    <string name="txt_title_dashboard">¿Sobre qué temática es tu emprendimiento?</string>
    <string name="txt_porteo">Porteo ergonómico</string>
    <string name="txt_lactancia">Lactancia materna</string>
    <string name="txt_entrenamiento">Entrenamiento pre y post parto</string>
    <string name="txt_ropa">Ropa y accesorios</string>
    <string name="txt_sales_title">Venta de Productos</string>
    <string name="txt_desc_cardview">Mochila ergonómica evolutiva hecha de fular tejido,  con puente ajustable, tiene un ajuste único,
        patentado por Emeibaby Austria. Es una de las mochilas ergonómicas más recomendadas para bebés recién nacidos.</string>
    <string name="txt_cardview">Mochila ergonómica Emeibaby</string>
    <string name="txt_contact">correo@correo.com</string>

    <!-- Variables de errores en la aplicación -->
    <string name="error_mail_null">Campo E-mail no debe estar vacío</string>
    <string name="error_pass_null">Campo Contraseña no debe estar vacío</string>
    <string name="error_mail_wrongformat">Campo E-mail debe tener formato ejemplo@email.com</string>
    <string name="error_name_wrongformat">Campo Nombre no debe contener números ni caracteres especiales</string>
    <string name="error_text_null">Campo no debe estar vacío</string>
    <string name="error_pass_not_same">Las contraseñas no coinciden</string>

</resources>