<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#27FF5D5D"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="38dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="38dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_title_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title_dashboard"
                style="@style/Widget.MaterialComponents.TextView"
                android:fontFamily="sans-serif"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/txt_porteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/txt_porteo"
                android:textSize="30sp"/>

            <ImageButton
                android:id="@+id/img_porteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_imgporteo"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/txt_lactancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/txt_lactancia"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/img_lactancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_imglactancia"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/txt_entrenamiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/txt_entrenamiento"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/img_entrenamiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_imgentrenamiento"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/txt_ropa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/txt_ropa"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/img_ropa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_imgropabebe"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>